# snail

./: .gitignore  CMakeLists.txt
cmake/: FindChaiScript.cmake
snail/: CMakeLists.txt  chai.h  chai.inl  hash.h  hash.inl  log.h  log.inl  output.h  output.inl  snail.h  vector3.h
snail/math/: math.h  vector3.h  vector3.inl  vector3Serialize.inl
snail/mesh/: cut1.h  cut2.h  generate.h  generate.inl  indexable.h  indexable.inl  mesh.h  mesh.inl  meshSerialize.inl  triangle.h  triangle.inl  triangleSerialize.inl  triangleTree.h  vertex.h
snail/raytracing/: ray.h  ray.inl  raySerialize.inl  triangleRayIntersection.h  triangleRayIntersection.inl  triangleRayIntersectionSerialize.inl  triangleTriangleIntersection.h  triangleTriangleIntersection.inl  triangleTriangleIntersectionSerialize.inl
snail/utils/: hash.inl  log.h  serialize.h  serialize.inl
tests/: CMakeLists.txt  triangle_ray_intersection.cpp  triangle_triangle_intersection.cpp
viewer/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  color.cpp  color.h  glad.c  main.cpp  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h  shader.h
viewer/glad/: glad.h
viewer/shaders/: fxaa.fs.glsl  fxaa.vs.glsl
viewer/shaders/abuffer/: build_lists.fs.glsl  build_lists.vs.glsl  resolve_lists.fs.glsl
viewer/shaders/default/: default.fs.glsl  default.vs.glsl
viewer/shaders/depth_peeling/: blend.fs.glsl  blend.vs.glsl  pass_render.fs.glsl  pass_render.vs.glsl
